<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hassle</string>
    <string name="menu_twitter">Connect a Twitter Account!</string>
    <string name="menu_email">Connect an Email Address!</string>
    
    <string name="welcome_to">Welcome To</string>
    <string name="create_contact">Create A New Hassle Contact</string>
    <string name="import_contact">Import Contacts From Phone</string>
    <string name="view_contacts">View My Hassle Contacts</string>
    
    <string name="gmail">Gmail Address</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    
    <string name="delete_contact">Delete Contact</string>
    <string name="are_you_sure">Are you sure you want to remove this Hassle contact from your list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="who">Who do you want to Hassle?</string>
    <string name="what">What do you want to Hassle them about?</string>
    <string name="send_text">Send Text</string>
    <string name="send_email">Send Email</string>
    <string name="send_tweet">Send Tweet</string>
    <string name="btn_hassle">HASSLE!</string>
    
    <string name="add_contact">Add a new Hassle contact?</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="twitter">Twitter Handle</string>
    <string name="photo">Photo</string>
    <string name="create">Create Contact!</string>

</resources>
