<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical"
    android:background="@drawable/btn_hassle" >
    
    <ImageView android:id="@+id/lvw_contacts_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#999999"
        android:contentDescription="@string/photo" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lvw_contacts_image"
        android:padding="8dp"
        android:orientation="vertical" >
        
        <TextView style="@style/lvw_contacts_name_text"
            android:id="@+id/lvw_contacts_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />
        
        <TextView style="@style/lvw_contacts_text"
            android:id="@+id/lvw_contacts_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" />
        
        <TextView style="@style/lvw_contacts_text"
            android:id="@+id/lvw_contacts_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />
        
        <TextView style="@style/lvw_contacts_text"
            android:id="@+id/lvw_contacts_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter" />
        
    </LinearLayout>
    

</RelativeLayout>
