<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewContact"
    android:orientation="vertical" >
    
    <ImageView android:id="@+id/contact_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/photo"
        android:background="#999999"
        android:clickable="true"
        android:onClick="photo_clicked" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="#212121" />
    
    <EditText android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:inputType="textCapWords"
        android:textSize="16sp"
        android:textColor="#212121" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18sp"
        android:textColor="#212121" />
    
    <EditText android:id="@+id/phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:inputType="phone"
        android:textSize="16sp"
        android:textColor="#212121" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="#212121" />

    <EditText android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textColor="#212121" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        android:textSize="18sp"
        android:textColor="#212121" />

    <EditText android:id="@+id/twitter_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:inputType="text"
        android:textSize="14sp"
        android:textColor="#212121" />
    
    <Button android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/rounded_blue"
        android:text="@string/create"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:onClick="create_clicked" />
    <!-- 
    <Button android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/rounded_blue"
        android:text="TEST"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:onClick="test_clicked" />
	 -->
</LinearLayout>
</ScrollView>
