<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btn_hassle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".Hassle" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp" >

                <ImageView
                    android:id="@+id/hassle_picture"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="#999999"
                    android:clickable="true"
                    android:contentDescription="@string/photo"
                    android:onClick="btn_edit_clicked" />

                <TextView
                    android:id="@+id/hassle_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="45dp"
                    android:layout_toRightOf="@id/hassle_picture"
                    android:singleLine="true"
                    android:textColor="#40B840"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/btn_speak"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="#FAFAFA"
                    android:contentDescription="@string/photo"
                    android:onClick="btn_speak_clicked"
                    android:src="@android:drawable/ic_btn_speak_now" />
            </RelativeLayout>

            <EditText
                android:id="@+id/hassle_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="top"
                android:hint="@string/what"
                android:inputType="textMultiLine"
                android:maxLength="140"
                android:minHeight="160dp"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp" >

                <ImageView
                    android:id="@+id/switch_text"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/send_text"
                    android:onClick="switch_text"
                    android:src="@drawable/sms_active" />

                <TextView
                    android:id="@+id/send_text"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginBottom="16dp"
                    android:layout_toRightOf="@id/switch_text"
                    android:gravity="center"
                    android:text="@string/send_text"
                    android:textColor="#212121"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/switch_email"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_below="@id/send_text"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/send_email"
                    android:onClick="switch_email"
                    android:src="@drawable/email_active" />

                <TextView
                    android:id="@+id/send_email"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_below="@id/send_text"
                    android:layout_marginBottom="16dp"
                    android:layout_toRightOf="@id/switch_email"
                    android:gravity="center"
                    android:text="@string/send_email"
                    android:textColor="#212121"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/switch_twitter"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_below="@id/send_email"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/send_tweet"
                    android:onClick="switch_twitter"
                    android:src="@drawable/twitter_active" />

                <TextView
                    android:id="@+id/send_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_below="@id/send_email"
                    android:layout_marginBottom="16dp"
                    android:layout_toRightOf="@id/switch_twitter"
                    android:gravity="center"
                    android:text="@string/send_tweet"
                    android:textColor="#212121"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@id/btn_hassle"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_hassle"
        android:onClick="btn_hassle_clicked"
        android:text="@string/btn_hassle"
        android:textColor="#FEFEFE"
        android:textSize="28sp"
        android:textStyle="bold" />

</RelativeLayout>